# ronove

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/ronove/: ronove.h
samples/: timer.cpp
src/: ronove_linux.cpp  ronove_win.cpp
